complex_example/k8s/aggregator-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: holidayaggregator-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: holidayaggregator
  template:
    metadata:
      labels:
        app: holidayaggregator
    spec:
      containers:
        - name: holidayaggregator
          image: arun6783/holidayaggregator
---
kind: Service
apiVersion: v1
metadata:
  name: holidayaggregator-srv
spec:
  selector:
    app: holidayaggregator
  ports:
    - name: holidayaggregator-tcp
      port: 5000
      targetPort: 5000
