complex_example/k8s/hotels-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotels-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotels
  template:
    metadata:
      labels:
        app: hotels
    spec:
      containers:
        - name: hotels
          image: arun6783/hotels
---
kind: Service
apiVersion: v1
metadata:
  name: hotels-srv
spec:
  selector:
    app: hotels
  ports:
    - name: hotels-tcp
      port: 4000
      targetPort: 4000
    - name: hotels-https
      port: 4443
      targetPort: 4443
    - name: hotels-grpc
      port: 5052
      targetPort: 5052
