complex_example/k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregation-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregation-redis
  template:
    metadata:
      labels:
        app: aggregation-redis
    spec:
      containers:
        - name: aggregation-redis
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: aggregation-redis-srv
spec:
  selector:
    app: aggregation-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
